<resources>
    <string name="app_name">Emelyanov-v-18</string>
    <string name="music5plus">Музыка 5+</string>
    <string name="goodDayShasha">Добрый день, Саша!</string>
    <string name="ok">OK</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="x">X</string>
    <string name="_0">0</string>
    <string name="enter_name">Введите название</string>
    <string name="songSearch">Поиск песни</string>
    <string name="genre">Жанр</string>
    <string name="indi">Инди</string>
    <string name="djaz">Джаз</string>
    <string name="pop">Поп</string>
    <string name="rock">Рок</string>
    <string name="showmore">Показать ещё</string>
    <string name="image">image</string>
    <string name="lizer">Lizer</string>
    <string name="baboc">Бабочки</string>
    <string name="_2_24">2:24</string>
    <string name="star">Звезда</string>
    <string name="_2_53">2:53</string>
    <string name="corj">Макс Корж</string>
    <string name="zakat">Малиновый закат</string>
    <string name="_2_57">2:57</string>
    <string name="gor">Горы по колено</string>
    <string name="_3_59">3:59</string>
    <string name="todo">TODO</string>
    <string name="scarlxrd">Scarlxrd</string>
    <string name="heart_attack">Heart Attack</string>
    <string name="_3_13">3:13</string>
    <string name="king_scar">King, Scar.</string>
    <string name="_3_40">3:40</string>
    <string name="ramil">Ramil`</string>
    <string name="sia">Сияй</string>
    <string name="_2_01">2:01</string>
    <string name="padali">Падали</string>
    <string name="_2_39">2:39</string>
</resources>