<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".StartActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="21dp"
            android:layout_marginEnd="19dp"
            android:text="@string/music5plus"
            android:textAlignment="textEnd"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginBottom="10dp"/>

        <ImageView
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/circle_bg"
            android:src="@drawable/person"
            android:contentDescription="@string/image"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="21dp"
            android:layout_marginEnd="19dp"
            android:text="@string/goodDayShasha"
            android:textAlignment="center"
            android:textSize="20sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="bottom"
        android:layout_marginHorizontal="30dp"
        android:layout_marginBottom="33dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="30dp">

            <TextView
                android:layout_width="50dp"
                android:layout_height="3dp"
                android:background="@color/gray"/>
            <TextView
                android:layout_width="50dp"
                android:layout_height="3dp"
                android:background="@color/gray"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="15dp"/>
            <TextView
                android:layout_width="50dp"
                android:layout_height="3dp"
                android:background="@color/gray"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="30dp"/>
            <TextView
                android:layout_width="50dp"
                android:layout_height="3dp"
                android:background="@color/gray"/>
        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp">

            <Button
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="start"
                android:background="@drawable/rounded_button_bg_purple"
                android:backgroundTint="@color/cream_purple"
                android:text="@string/_1"
                android:textSize="34sp"
                android:textStyle="bold"/>

            <Button
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/rounded_button_bg_purple"
                android:backgroundTint="@color/cream_purple"
                android:text="@string/_2"
                android:textSize="34sp"
                android:textStyle="bold"/>

            <Button
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="end"
                android:background="@drawable/rounded_button_bg_purple"
                android:backgroundTint="@color/cream_purple"
                android:text="@string/_3"
                android:textSize="34sp"
                android:textStyle="normal"/>

        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp">

            <Button
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="start"
                android:background="@drawable/rounded_button_bg_purple"
                android:backgroundTint="@color/cream_purple"
                android:text="@string/_4"
                android:textSize="34sp"
                android:textStyle="bold"/>

            <Button
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/rounded_button_bg_purple"
                android:backgroundTint="@color/cream_purple"
                android:text="@string/_5"
                android:textSize="34sp"
                android:textStyle="bold"/>

            <Button
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="end"
                android:background="@drawable/rounded_button_bg_purple"
                android:backgroundTint="@color/cream_purple"
                android:text="@string/_6"
                android:textSize="34sp"
                android:textStyle="normal"/>

        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp">

            <Button
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="start"
                android:background="@drawable/rounded_button_bg_purple"
                android:backgroundTint="@color/cream_purple"
                android:text="@string/_7"
                android:textSize="34sp"
                android:textStyle="bold"/>

            <Button
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/rounded_button_bg_purple"
                android:backgroundTint="@color/cream_purple"
                android:text="@string/_8"
                android:textSize="34sp"
                android:textStyle="bold"/>

            <Button
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="end"
                android:background="@drawable/rounded_button_bg_purple"
                android:backgroundTint="@color/cream_purple"
                android:text="@string/_9"
                android:textSize="34sp"
                android:textStyle="normal"/>

        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="start"
                android:background="@drawable/rounded_button_bg_purple"
                android:backgroundTint="@color/pink_purple"
                android:text="@string/x"
                android:textSize="40sp"
                />

            <Button
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/rounded_button_bg_purple"
                android:backgroundTint="@color/cream_purple"
                android:text="@string/_0"
                android:textSize="34sp"
                android:textStyle="bold"/>

            <Button
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="end"
                android:background="@drawable/rounded_button_bg_purple"
                android:backgroundTint="@color/pink_purple"
                android:text="@string/ok"
                android:textSize="34sp"
                android:textStyle="normal"
                android:onClick="goToSong"
                tools:ignore="UsingOnClickInXml" />

        </FrameLayout>

    </LinearLayout>
</LinearLayout>